# forge-pdm-mlops

./: .gcloudignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.hf  Dockerfile.worker  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/: REPO_META.md
.github/workflows/: ci.yml  retrain.yml
configs/: dataset.json
data/: sample_readings.parquet
docs/: ARCHITECTURE.md  DECISIONS.md  DEPLOY.md  EPOCH2_PLAN.md  RESUME_TUNING_RUN.md  ROADMAP.md  STATE.md
scripts/: build_sample.py  deploy_cloudrun.sh  deploy_cloudrun_neon.sh  deploy_space.sh  hf_entrypoint.sh  seed_demo_registry.py
src/pdm_mlops/: __init__.py  ceiling.py  cli.py  config.py  data.py  detect.py  detect_score.py  diagnostics.py  features.py  flows.py  generate.py  jobs.py  models.py  monitor.py  registry.py  sequence.py  serve.py  store_gen.py  store_pg.py  suspect.py  train.py  tune.py  upload.py  worker.py
terraform/: imports.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_ceiling.py  test_data.py  test_demo.py  test_detect.py  test_detect_score.py  test_diagnostics.py  test_features.py  test_flows.py  test_generate.py  test_generate_api.py  test_models.py  test_monitor.py  test_registry.py  test_seed_demo_registry.py  test_sequence.py  test_serve.py  test_skeleton.py  test_store_pg.py  test_suspect.py  test_train.py  test_tune.py  test_upload.py
