[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-pdm-mlops"
version = "0.1.0"
description = "MLOps pipeline (MLflow tracking + registry, FastAPI serving, drift → auto-retrain) over synthetic predictive-maintenance telemetry from can-telemetry-forge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jorge Ribeiro" }]
keywords = [
    "mlops",
    "mlflow",
    "model-registry",
    "drift-detection",
    "predictive-maintenance",
    "fastapi",
    "prefect",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
# Core training/tracking deps. The model layer (D4) is two cheap estimators:
# scikit-learn (LogisticRegression baseline) + LightGBM (contender). MLflow is the
# tracking + registry spine; pyarrow reads the committed sample parquet.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "mlflow>=2.10",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Serving (F4): FastAPI app exposing the promoted model.
serve = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
# Drift monitoring + orchestration (F5): Evidently drift report, Prefect flow.
ops = ["evidently>=0.4", "prefect>=2.16"]
# Hyper-parameter search (F2.6): the Optuna study behind `pdm tune`. matplotlib renders
# the diagnostic PNGs; it is optional — diagnostics fall back to numeric CSVs without it,
# so the core install and CI stay light (ADR-006).
tune = ["optuna>=3.4", "matplotlib>=3.7"]
# Deep outlier rung (F2.5): the CPU-only PyTorch autoencoder in the detection ladder.
# Optional and kept OUT of core CI — the ladder runs (and signal_suspect is computed)
# without it via the cheap multivariate + temporal rungs (ADR-005). CPU build only;
# no GPU/CUDA on the production desktop.
deep = ["torch>=2.0"]
# Live data regeneration (D1): import the companion generator to produce the FULL
# training dataset from configs/dataset.json + a seed, and to move the `season`
# drift knob. The version is PINNED so desktop and notebook regenerate
# byte-identical data (ADR-001) — "same config" only reproduces if the generator
# version matches too. The package still runs fully offline against the committed
# smoke fixture without this extra; CI never installs it.
generate = ["can-telemetry-forge==0.2.0"]

[project.scripts]
pdm = "pdm_mlops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
